# chip-8

./: CMakeLists.txt
src/: chip8.cpp  chip8.h  main.cpp
